# BOB-Agent

./: .env.example  .gitignore  BOB_Documentation_Reference.md  Makefile  README.md  STARTUP.md  bob_documents_data.json  docker-compose.yml
deploy/librechat/: docker-compose.override.yml  env.reference.md  librechat.yaml
docs/: ARCHITECTURE.md  DEMO.md  PITCH.md  VIDEO_SCRIPT.md  WALKTHROUGH.md
scripts/: seed_demo.py
services/assistant/: Dockerfile  README.md  pyproject.toml
services/assistant/src/bobai_assistant/: __init__.py  assistant.py  config.py  llm.py  main.py  prompts.py  retriever.py  schemas.py
services/assistant/tests/: test_assistant_and_api.py  test_llm_registry.py  test_retriever.py
services/identity-trust/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/identity-trust/src/bobai_identity/: __init__.py  config.py  dashboard.html  geoip.py  login.html  main.py  portal.html  schemas.py  signup.html
services/identity-trust/src/bobai_identity/auth/: __init__.py  hashing.py  password.py  webauthn.py
services/identity-trust/src/bobai_identity/engine/: __init__.py  policy.py  risk.py
services/identity-trust/src/bobai_identity/engine/detectors/: __init__.py  anomaly.py  behavioral.py  context.py  device.py  geo.py
services/identity-trust/src/bobai_identity/routers/: __init__.py  login.py  observability.py  webauthn.py
services/identity-trust/src/bobai_identity/store/: __init__.py  db.py
services/identity-trust/tests/: conftest.py  test_analytics.py  test_api.py  test_audit.py  test_engine.py  test_signup.py
services/kyc/: Dockerfile  README.md  pyproject.toml
services/kyc/src/bobai_kyc/: __init__.py  config.py  ekyc.html  face.py  forensics.py  fraud.py  kb.py  main.py  matcher.py  ocr.py  schemas.py  validators.py  vision.py
services/kyc/src/bobai_kyc/routers/: __init__.py  documents.py  ekyc.py
services/kyc/tests/: conftest.py  test_check_and_api.py  test_face.py  test_fraud.py  test_kb.py  test_vision.py
services/mcp/: Dockerfile  README.md  pyproject.toml
services/mcp/src/bobai_mcp/: __init__.py  server.py
services/mcp/tests/: test_tools.py
