[project]
name = "bobai-identity-trust"
version = "0.1.0"
description = "BOBAI — privacy-first, risk-based Identity Trust engine (BoB x IIT-GN Hackathon 2026)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "scikit-learn>=1.5",
    "river>=0.22",
    "webauthn>=2.5",
    "haversine>=2.8",
    "numpy>=1.26",
    "geoip2>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bobai_identity"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
