[project]
name = "bobai-kyc"
version = "0.1.0"
description = "BOBAI — KYC document-requirements + onboarding-fraud service (BoB Hackathon 2026)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
# Heavy CV/OCR deps for the fraud + eKYC sub-modules are added when those land.
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bobai_kyc"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
