[project]
name = "bobai-mcp"
version = "0.1.0"
description = "BOBAI — FastMCP server exposing Identity Trust, KYC and Assistant as MCP tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bobai_mcp"]
